# eulergrams

./: batch.sh  configure.ac
src/: JSONAbstractDescription.cpp  JSONAbstractDescription.h  Main.cpp  Makefile.am  TestContainmentHierarchy.cpp  TestContainmentHierarchy.h  TestJSONImport.cpp  TestJSONImport.h
tests/data/: ,..json  ,.json  A_B_AB,_,A,_AB.json  A_B_AB,_,A_AB,B.json  A_B_AB,_,A_AB,B_AB.json  A_B_AB,_,A_B,_AB.json  A_B_AB,_,A_B_AB_.,B_AB.json  A_B_AB,_,B,_AB.json  A_B_AB,_,B_AB,A.json  A_B_C_AB_AC_BC_ABC,_B,A_AB_ABC,_B,_B.json  a,,a_..json  a,.,a_.,.,.,..json  a,.,a_.,..json  a,..json  a,._a.json  a,.json  a,a.json  a.json  a_ab.json  a_ab_abc.json  a_ab_ac.json  a_ab_ac_abc.json  a_ab_ac_bc.json  a_ab_ac_bc_abc.json  a_ab_b_ac_c_ad_d_be_e_cf_f_dg_g.json  a_ab_b_ac_c_ad_d_be_e_cf_f_dg_g_eh_h_fi_i_gj_j_ak_k_kl_l_lm_m.json  a_ab_bc.json  a_ab_bc_abc.json  a_ab_c.json  a_ab_c_abc,..json  a_ab_c_abc,_.json  a_ab_c_abc,a.json  a_ab_c_abc,a_ab.json  a_ab_c_abc,ab.json  a_ab_c_cd.json  a_abc.json  a_abc_abcd.json  a_b.json  a_b_ab,.json  a_b_ab,_,.,_a.json  (+86 more)
