AC_INIT([eulergrams],[0.1])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CXX
AC_PROG_CC

#AC_CHECK_LIB(cola)
#PKG_CHECK_MODULES(COLA,cola-0.1)
#AC_SUBST(CAIROMM_CFLAGS)
#AC_SUBST(CAIROMM_LIBS)

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
